2007-06-02  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdk.c (Gdk.windowing_quartz?, Gdk.windowing_directfb?):
	added.

2007-05-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkcairo.c (Init_gtk_gdk_cairo): use set_source_gdk_color
	not set_source_color. rcairo 1.5.0 uses the name.

	* src/lib/gtk2/base.rb: kept backward compatibility.

2007-05-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkaboutdialog.c (aboutdialog_s_show_about_dialog): Fix a bug
	to access wrap_license by Kazuhiro NISHIYAMA.

2007-04-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwindow.c: Fixed Gtk::Window#icon= accept an path for icon.
	Reported by Detlef Reichl.

2007-03-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkfilesel.c (fsel_get_selections),
	  src/rbgtkrc.c (rc_get_default_files): suppressed warnings.

2007-02-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdrag.c: Fixed wrong API names
        (Gtk::Drag.(set|get)_track_motion to Gtk::Drag.dest_(set|get)_track_motion)

2007-02-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkdrag.c: fixed Ruby to C conversion bugs.
	Thanks to Nobody/Anonymous! Bug #1625880.

2007-02-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcellrendereraccel.c: Fixed wrong constant definition.

2007-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkbbox.c: Add Gtk::ButtonBox#get_child_secondary.
	* src/rbgtkbindingset.c: Add Gtk::BindingSet#entry_remove, #entry_skip. 

2007-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkassistant.c: Add Gtk::Assistant#set_current_page. 

2007-01-06  Juergen Mangler  <juergen.mangler@univie.ac.at>

	* sample/misc/alpha-demo.rb: added.
	Original:
	- http://plan99.net/~mike/blog/2006/06/05/alpha-blended-windows-in-python/
	- http://david.navi.cx/blog/?p=91

2007-01-02  Dirk von Schmieden

	* src/rbgdkdragcontext.c: Fix type conversions. Bug #1625880.

2006-12-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.c: Fixed an warning to initialize Gtk::Window.
	reported by Tilman Sauerbeck.
